--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div id="header">
     <div class="container">
         <nav>
-            <a href="file:///E:/project/PortFolio/Personal-portfolio/MyProject/index.html#contact" target= "_top">
-            <img src="images/logo.png" class="logo">
+            <a href="#" target= "_top">
+            <img src="https://github.com/Nishant300/My-Portfolio/blob/main/logo.png" class="logo">
         </a>
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
