--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <nav>
             <a href="#" target= "_top">
-            <img src="/logo.png" class="logo">
+            <img src="logo.png" class="logo">
         </a>
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
